--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2" style="background-image: url(assets/images/mbr-2000x1333.jpg); padding-top: 200px; padding-bottom: 200px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2" style="background-image: url(assets/images/mbr-2000x1333.jpg); padding-top: 200px; padding-bottom: 200px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(40, 50, 78);">
     </div>
@@ -86,7 +86,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-j" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container article" id="header3-j" style="background-color: rgb(239, 239, 239); padding-top: 80px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -97,7 +97,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-i" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 80px;">
+<section class="mbr-section article mbr-section__container" id="content1-i" style="background-color: rgb(239, 239, 239); padding-top: 20px; padding-bottom: 80px;">
 
     <div class="container">
         <div class="row">
