create github pages

--- a/orcamento.html
+++ b/orcamento.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">AGENDAR CERTIFICADO</a></li><li class="nav-item dropdown open"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">PEDIR ORÇAMENTO</a></li><li class="nav-item dropdown open"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">CONTACTOS</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">AGENDAR CERTIFICADO</a></li><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">PEDIR ORÇAMENTO</a></li><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">CONTACTOS</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-g" style="background-image: url(assets/images/mbr-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-g" style="background-image: url(assets/images/certificados-2000x1323.png);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(8, 14, 30);"></div>
 
@@ -69,7 +69,7 @@
 
                     <h1 class="mbr-section-title display-1">OBTENHA ORÇAMENTO PARA CERTIFICADO ENERGÉTICO</h1>
                     
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="orcamento.html#htmlblock-block-e">PEDIR ORÇAMENTO</a> </div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="orcamento.html#deltapieditor-x">PEDIR ORÇAMENTO</a> </div>
                 </div>
             </div>
         </div>
@@ -79,33 +79,16 @@
 
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="htmlblock-block-e" style="background-color: rgb(255, 255, 255);">
-	<style>.block {padding-bottom:0px; padding-top:0px;}</style>		
-            
-
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-background" id="deltapieditor-x" style="background-image: url(assets/images/7628x1080-2-2000x1139.png);"> 
+		
+<style></style>
     <div class="mbr-section__container mbr-section__container--isolated container">
         <div class="row block">
-            <div class="mbr-box mbr-box--fixed mbr-box--adapted">
-                <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__left col-sm-8">
-                    <div class="mbr-section__container mbr-section__container--middle">
-                        <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                            <div class="mbr-header__text tiny"><h3>Block Title</h3></div>
-                        </div>
-                    </div>
-                    <div class="mbr-section__container">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><div class="tiny"><h1>HTML Code</h1></div>
-						</div>
-                    </div>
-                </div>
-            </div>
+			<div class="tiny"><iframe src="http://www.dmar-imobiliaria.pt/agendar-certificado/" name="frame1" scrolling="no" frameborder="no" align="center" height="800px" width="1100px">
+</iframe></div>
         </div>
     </div>
 
-	<div>
-		<script src="https://cdn.tinymce.com/4/tinymce.min.js"></script>
-		<script>tinymce.init({selector:'.tiny', inline: true, plugins: ['advlist autolink lists link image media charmap print preview anchor','searchreplace visualblocks code fullscreen','insertdatetime table contextmenu paste code textcolor colorpicker textpattern'],  toolbar1: 'insertfile undo redo | styleselect | bold italic forecolor backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image media | code',});</script>
-	</div>
-	
 </section>
 
 <section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-c" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
