--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">AGENDAR CERTIFICADO</a></li><li class="nav-item dropdown open"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">PEDIR ORÇAMENTO</a></li><li class="nav-item dropdown open"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="true">CONTACTOS</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-xl" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="#top">AGENDAR CERTIFICADO</a></li><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">PEDIR ORÇAMENTO</a></li><li class="nav-item dropdown"><a class="nav-link link" href="https://mobirise.com/" aria-expanded="false">CONTACTOS</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2" style="background-image: url(assets/images/mbr-2000x1333.jpg); padding-top: 200px; padding-bottom: 200px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2" style="background-image: url(assets/images/mbr-2000x1333.jpg); padding-top: 200px; padding-bottom: 200px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(40, 50, 78);">
     </div>
