--- a/agendar.html
+++ b/agendar.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-y" style="background-image: url(assets/images/pexels-photo-2000x1334.png);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-y" style="background-image: url(assets/images/pexels-photo-2000x1334.png);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(8, 14, 30);"></div>
 
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-background" id="deltapieditor-11" style="background-image: url(assets/images/7628-nt-2000x1600.png);"> 
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-background" id="deltapieditor-11" style="background-image: url(assets/images/7628x1080-v2-2000x1600.png);"> 
 		
 <style></style>
     <div class="mbr-section__container mbr-section__container--isolated container">
